--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
                     <div>
                         <h1>My Service</h1>
                         <br>
-                        <img src="/assets/poster.png"  class="img-fluid" style="border-radius: 50%;">
+                        <img src="assets/poster.png"  class="img-fluid" style="border-radius: 50%;">
                     </div>
                     <div>
                         <h2><i class="fa-solid fa-code"></i>&nbsp;Web Development</h2>
