--- a/index.html
+++ b/index.html
@@ -72,9 +72,9 @@
                     </div>
                     <div>
                         <p>
-                            Hi, I'm <b>Deekshith</b>, a <b>MERN Stack Developer</b> with expertise in <b>Java</b>, <b>DSA</b>, and <b>Cybersecurity</b>. 
-                            Currently pursuing my <b>BE in Computer Science Engineering</b> at <b>SJB Institute of Technology</b>, I specialize in building 
-                            scalable web applications and solving complex problems.
+                            Hi, I'm <b>Deekshith</b>, a Java Full Stack Developer skilled in Java Core, Spring Boot, Microservices, and MongoDB. 
+                            I hold a BE (Honours) in Computer Science Engineering from SJB Institute of Technology.
+                            I specialize in building robust backend systems and dynamic web applications using technologies like Hibernate, JDBC, and React.js.
                         </p>
                         <a href="#Home" class="download-btn">
                             Show More
@@ -93,13 +93,13 @@
                     <div>
                         <h2><i class="fa-solid fa-code"></i>&nbsp;Web Development</h2>
                         <p>
-                            I provide professional <b>web development services</b> to bring your ideas to life! With expertise in the 
-                            <b>MERN stack</b> (MongoDB, Express.js, ReactJS, Node.js), I specialize in creating:
+                            I provide professional web development services to bring your ideas to life!
+                            With expertise in the <b>Java Full Stack</b> (Java, Spring Boot, MongoDB, React.js), I specialize in creating:
                         </p>
                         <ul>
-                            <li><b>Dynamic and responsive websites</b> tailored to your needs</li>
-                            <li><b>Scalable full-stack web applications</b> with seamless performance</li>
-                            <li>Custom features like <b>user authentication, dashboards, APIs</b>, and more</li>
+                            <li>Dynamic and responsive websites tailored to your needs</li>
+                            <li>Scalable full-stack web applications with robust backend architecture</li>
+                            <li>Custom features like user authentication, REST APIs, dashboards, and more</li>
                         </ul>
                         <!-- <p>
                             Whether you’re a startup, a small business, or an individual with a vision, I’m here to help you build
@@ -211,7 +211,7 @@
                         <!-- Card 2 -->
                         <div class="col-md-4">
                             <div class="card">
-                                <img src="assets/GoogleCybersecurity.png" class="card-img-top" alt="Project Image" style="height: 300px; width: 100%; object-fit: cover;">
+                                <img src="assets/UdemyJavaFullStack.png" class="card-img-top" alt="Project Image" style="height: 300px; width: 100%; object-fit: cover;">
 
                             </div>
                         </div>
