--- a/index.html
+++ b/index.html
@@ -204,14 +204,14 @@
                         <!-- Card 1 -->
                         <div class="col-md-4">
                             <div class="card">
-                                <img src="assets/ApnaCollege.png" class="card-img-top" alt="Project Image" style="height: 300px; width: 100%; object-fit: cover;">
+                                <img src="assets/ApnaCollegeJavaDSA.png" class="card-img-top" alt="Project Image" style="height: 300px; width: 100%; object-fit: cover;">
                             </div>
                         </div>
                 
                         <!-- Card 2 -->
                         <div class="col-md-4">
                             <div class="card">
-                                <img src="assets/UdemyJavaFullStack.png" class="card-img-top" alt="Project Image" style="height: 300px; width: 100%; object-fit: cover;">
+                                <img src="assets/UdemyJavaFullStack.jpg" class="card-img-top" alt="Project Image" style="height: 300px; width: 100%; object-fit: cover;">
 
                             </div>
                         </div>
